Added planar mosaics

--- a/skysub.tex
+++ b/skysub.tex
@@ -575,6 +575,23 @@ Optimized planar offsets can add a arbitrary amount of flux to a mosaic, and thi
 
 \subsection{Analysis of Planar Sky Offsets}
 
+\begin{figure*}[t]
+	\centering
+		\includegraphics[width=6in]{figs/planar_mosaics}
+	\caption{Planar sky fitted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31.}
+	\label{fig:planar_mosaics}
+	% made with skysubpub/mosaic_plots.py
+\end{figure*}
+
+
+\begin{figure*}[t]
+	\centering
+		\includegraphics[width=6in]{figs/montage_planar_mosaics}
+	\caption{\sw{Montage} Planar sky fitted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31.}
+	\label{fig:montage_planar_mosaics}
+	% made with skysubpub/mosaic_plots.py
+\end{figure*}
+
 \bibliography{master}
 
 \end{document}
