imageprep: new introduction

--- a/skysub.tex
+++ b/skysub.tex
@@ -160,15 +160,19 @@ Finally, we employ an innovative randomized sky-targetting nodding pattern where
 \section{Image Preparation}
 \label{sec:reduction}
 
-Our goal is to produce an accurate mosaic of M31 from ground-based, CFHT/WIRCam, near-infrared images. As is typical, raw images from the telescope are treated by a pipeline that cleans detector signatures and calibrates flux and astrometry. Here we wish to comment on some of image reduction steps that have a significant impact on the quality of our final mosaic.
+Our goal is to produce an accurate mosaic of M31 from ground-based, CFHT/WIRCam, NIR images. Raw images from the telescope are treated by CFHT's \iiwione\ pipeline that cleans detector signatures and calibrates flux and astrometry. Here we wish to comment on some of the image reduction steps that have a significant impact on the quality of our final mosaic, and the custom WIRCam pipeline adaptation made by \androids.
 
 WIRCam data are offered by CFHT in three progressive stages of \emph{preprocessing} by their \iiwione\ pipeline to allow programmes, such as this one, to re-implement calibration recipes for potentially higher performance. These data flavours are: a raw image that is essentially untouched after leaving the instrument (\texttt{*o.fits}); an image that has been nonlinearity-corrected, dark subtracted and flat fielded (\texttt{*s.fits}); and an image that has been sky subtracted, in addition to all the previous treatments (\texttt{*p.fits}).
 
 As sky subtraction is the highest source of error in this program, the middle data product, \texttt{*s.fits}, would appear most amenable as a starting point for this program. Nonetheless, two \iiwione\ processing stages included in \texttt{*s.fits} products must be handled carefully.
 
-\paragraph{Cross-talk correction.} WIRCam integrations prior to March 2008 (that is, the 2007B data set, but not the 2009B data) suffered from electronic cross talk within the detector. This cross talk is manifested in repeating rings above and below saturated stars.\footnote{See \url{http://cfht.hawaii.edu/Instruments/Imaging/WIRCam/WIRCamCrosstalks.html}.} By default, the \iiwione\ pipeline removes this cross talk by subtracting a median of the 32 amplifier slices. Unfortunately, this algorithm fails in cases where the background has a surface brightness gradient (such as on the disk of M31) and produces an inverse surface brightness gradient that is stronger than the galaxy surface brightness itself. Loic Albert was kind to re-process the 2007B data set with the cross-talk correction turned off.
+\paragraph{Cross-talk correction} WIRCam integrations prior to March 2008 (that is, the 2007B data set, but not the 2009B data) suffered from electronic cross talk within the detector. This cross talk is manifested in repeating rings above and below saturated stars.\footnote{See \url{http://cfht.hawaii.edu/Instruments/Imaging/WIRCam/WIRCamCrosstalks.html}.} By default, the \iiwione\ pipeline removes this cross talk by subtracting a median of the 32 amplifier slices. Unfortunately, this algorithm fails in cases where the background has a surface brightness gradient (such as on the disk of M31) and produces an inverse surface brightness gradient that is stronger than the galaxy surface brightness itself. Loic Albert was kind to re-process the 2007B data set with the cross-talk correction turned off.
 
-\paragraph{Flat fielding.} We discovered that the flat fielding offered by \iiwione\ was only accurate to 2\% of edge-to-edge intensity. This appears to be a discrepancy between dome flat fielding, as employed by \iiwione, and night sky flat fielding. A complete discussion of \iiwione\ flat fielding, and the improvement realized by night sky flat fielding, is made in \S \todo{sec:flats}. The introduction of a new field illumination correction necessitates a re-evaluation of the WIRCam photometric zeropoint, as done in \S\todo{sec:photocal}.
+\paragraph{Flat fielding} We discovered that the flat fielding offered by \iiwione\ was only accurate to 2\% of edge-to-edge intensity. This appears to be a discrepancy between dome flat fielding, as employed by \iiwione, and night sky flat fielding. A complete discussion of \iiwione\ flat fielding, and the improvement realized by night sky flat fielding, is made in \S \ref{sec:flats}.
+
+\vspace{10pt}
+
+Our \androids\ pipeline thus begins with \texttt{*s.fits} data that have been undone of flat fielding. That is, we multiply the \texttt{*s.fits} image with with its associated dome flat.\footnote{Dome and twilight flats are made available by CFHT, \url{http://limu.cfht.hawaii.edu:80/detrend/wircam/}.} The result is an image that retains \iiwione's prescription for dark subtraction, bad pixel masking and non-linearity correction. The \androids\ WIRCam pipeline then carries out the following steps: homogenize the World Coordinate System across the dataset with \sw{Swarp} \citep{Bertin:2006}, produce and apply night sky flat fields (see \S \ref{sec:flats}), subtract median sky images (\S \ref{sec:mediansky}), and bootstrap photometric calibration to \textit{in situ} 2MASS stars (\S \ref{sec:photocal}).
 
 \subsection{Night sky flat fielding}
 \label{sec:flats}
